--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "fs-nextra": "^0.3.8",
     "gm": "^1.23.1",
-    "image-download": "^1.1.0"
+    "image-download": "^1.1.0",
+    "image-to-ascii": "^3.0.12"
   }
 }
